# boardgamehub

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  cli.py  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: boardgames.py  health.py
boardgamehub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: client.py  dashboard.py
tests/: test_boardgames.py  test_cli.py
